--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
     "axios": "^1.3.4",
+    "cloudinary-react": "^1.8.1",
     "combine-reducers": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
