--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "axios": "^1.3.4",
     "combine-reducers": "^1.0.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.6",
