--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@mui/joy": "^5.0.0-alpha.71",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "axios": "^1.3.4",
     "cloudinary-react": "^1.8.1",
     "combine-reducers": "^1.0.0",
@@ -40,6 +42,6 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "vite": "^4.2.1"
   }
 }
