--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,4 @@ VITE_CLIENT_ID=AgwecxrceiR7qNPI8oNcRGgfRPB20PGh
 VITE_DOMAIN=dev-sy67e2ky1xdydqgt.us.auth0.com
 VITE_AUDIENCE=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
 
-VITE_URL_BACK=https://adoptame-back.onrender.com
+VITE_URL_BACK=https://adoptame-back.onrender.com/
