--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.71",
     "@mui/material": "^5.11.13",
@@ -24,11 +25,11 @@
     "axios": "^1.3.4",
     "cloudinary-react": "^1.8.1",
     "combine-reducers": "^1.0.0",
-    "firebase": "^9.19.0",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.19.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
-     "react": "^18.2.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.6",
     "react-redux": "^8.0.5",
@@ -37,8 +38,9 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
+    "sweetalert2": "^11.7.3",
     "uuid": "^9.0.0",
-    "sweetalert2": "^11.7.3"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
